[package]
name = "jwtk"
version = "0.4.0"
edition = "2018"
repository = "https://github.com/blckngm/jwtk"
license = "MIT"
description = "JWT signing (JWS) and verification, with first class JWK and JWK Set (JWKS) support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["remote-jwks"]
remote-jwks = ["reqwest", "tokio"]

[dependencies]
base64 = "0.22.1"
openssl = "0.10.64"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
smallvec = "1.13.2"
reqwest = { version = "0.12.4", features = ["json"], optional = true }
tokio = { version = "1.37.0", features = ["sync"], optional = true }
openssl-sys = "0.9.102"
foreign-types = "0.3.2"
serde_with = "3.1.0"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
