[package]
name = "jwtk"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/blckngm/jwtk"
license = "MIT"
description = "JWT signing (JWS) and verification, with first class JWK and JWK Set (JWKS) support."

[features]
default = ["rsa", "remote-jwks"]
rsa = ["dep:rsa_crt", "dep:signature", "dep:rand_core"]
openssl = ["dep:openssl", "dep:openssl-sys", "dep:foreign-types"]
remote-jwks = ["dep:reqwest", "dep:tokio"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
smallvec = "1.13.2"
serde_with = "3.1.0"
sha2 = { version = "0.10", features = ["oid"] }

# RSA (RustCrypto fallback when openssl is not enabled)
rsa_crt = { package = "rsa", version = "0.9", optional = true, default-features = false, features = ["std", "getrandom"] }
signature = { version = "2", optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }

# OpenSSL
openssl = { version = "0.10.64", optional = true }
openssl-sys = { version = "0.9.102", optional = true }
foreign-types = { version = "0.3.2", optional = true }

# Remote JWKS
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1.37.0", features = ["sync"], optional = true }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
