[package]
name = "jwtk"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/blckngm/jwtk"
license = "MIT"
description = "JWT signing (JWS) and verification, with first class JWK and JWK Set (JWKS) support."

[features]
default = ["aws-lc", "remote-jwks"]
aws-lc = ["dep:aws-lc-rs"]
openssl = ["dep:openssl", "dep:openssl-sys", "dep:foreign-types"]
remote-jwks = ["dep:reqwest", "dep:tokio"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
smallvec = "1.13.2"
serde_with = "3.1.0"

# RSA (aws-lc-rs backend for verification)
aws-lc-rs = { version = "1", optional = true }

# OpenSSL
openssl = { version = "0.10.64", optional = true }
openssl-sys = { version = "0.9.102", optional = true }
foreign-types = { version = "0.3.2", optional = true }

# Remote JWKS
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1.37.0", features = ["sync"], optional = true }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
